crates/diffcore-core/tests/snapshots/snapshot_tests__go_http_api.snap
---
source: crates/diffcore-core/tests/snapshot_tests.rs
expression: v
---
{
  "annotations": null,
  "diff_source": {
    "base": "main",
    "base_sha": "[sha]",
    "diff_type": "BranchComparison",
    "head": "feature/go-api",
    "head_sha": "[sha]"
  },
  "groups": [
    {
      "complexity": null,
      "description": null,
      "edges": [],
      "entrypoint": {
        "entrypoint_type": "HttpRoute",
        "file": "internal/handlers/user.go",
        "symbol": "CreateUser"
      },
      "files": [
        {
          "changes": {
            "additions": 14,
            "deletions": 0
          },
          "flow_position": 0,
          "path": "internal/handlers/user.go",
          "role": "Entrypoint",
          "symbols_changed": []
        },
        {
          "changes": {
            "additions": 7,
            "deletions": 0
          },
          "flow_position": 1,
          "path": "internal/repositories/user_repo.go",
          "role": "Infrastructure",
          "symbols_changed": []
        },
        {
          "changes": {
            "additions": 9,
            "deletions": 0
          },
          "flow_position": 2,
          "path": "internal/services/user_service.go",
          "role": "Infrastructure",
          "symbols_changed": []
        }
      ],
      "group_type": null,
      "id": "group_1",
      "impact": "Module",
      "invariant": null,
      "name": "CreateUser (user) route",
      "review_focus": [],
      "review_order": 1,
      "risk": "Medium",
      "risk_score": 0.4375,
      "summary": []
    }
  ],
  "infrastructure_group": null,
  "summary": {
    "frameworks_detected": [
      "Go net/http"
    ],
    "languages_detected": [
      "go"
    ],
    "total_files_changed": 3,
    "total_groups": 1
  },
  "version": "1.0.0"
}
