crates/diffcore-core/tests/snapshots/snapshot_tests__mixed_language.snap
---
source: crates/diffcore-core/tests/snapshot_tests.rs
expression: v
---
{
  "annotations": null,
  "diff_source": {
    "base": "main",
    "base_sha": "[sha]",
    "diff_type": "BranchComparison",
    "head": "feature/mixed",
    "head_sha": "[sha]"
  },
  "groups": [
    {
      "edges": [
        {
          "edge_type": "Imports",
          "from": "frontend/src/routes/dashboard.ts",
          "to": "frontend/src/services/statsService.ts::fetchStats"
        },
        {
          "edge_type": "Calls",
          "from": "frontend/src/routes/dashboard.ts::getDashboard",
          "to": "frontend/src/services/statsService.ts::fetchStats"
        }
      ],
      "entrypoint": {
        "entrypoint_type": "HttpRoute",
        "file": "frontend/src/routes/dashboard.ts",
        "symbol": "getDashboard"
      },
      "files": [
        {
          "changes": {
            "additions": 13,
            "deletions": 0
          },
          "flow_position": 0,
          "path": "frontend/src/routes/dashboard.ts",
          "role": "Entrypoint",
          "symbols_changed": []
        },
        {
          "changes": {
            "additions": 4,
            "deletions": 0
          },
          "flow_position": 1,
          "path": "frontend/src/services/statsService.ts",
          "role": "Service",
          "symbols_changed": []
        }
      ],
      "id": "group_1",
      "name": "getDashboard (dashboard) route",
      "review_order": 1,
      "risk_score": 0.4375
    },
    {
      "edges": [],
      "entrypoint": {
        "entrypoint_type": "HttpRoute",
        "file": "backend/app/routes/analytics.py",
        "symbol": "get_analytics"
      },
      "files": [
        {
          "changes": {
            "additions": 9,
            "deletions": 0
          },
          "flow_position": 0,
          "path": "backend/app/routes/analytics.py",
          "role": "Entrypoint",
          "symbols_changed": []
        },
        {
          "changes": {
            "additions": 3,
            "deletions": 0
          },
          "flow_position": 1,
          "path": "backend/app/services/analytics_service.py",
          "role": "Infrastructure",
          "symbols_changed": []
        }
      ],
      "id": "group_2",
      "name": "get_analytics (analytics) route",
      "review_order": 2,
      "risk_score": 0.3125
    }
  ],
  "infrastructure_group": null,
  "summary": {
    "frameworks_detected": [
      "Express",
      "FastAPI"
    ],
    "languages_detected": [
      "python",
      "typescript"
    ],
    "total_files_changed": 4,
    "total_groups": 2
  },
  "version": "1.0.0"
}
