crates/diffcore-core/tests/snapshots/snapshot_tests__python_fastapi.snap
---
source: crates/diffcore-core/tests/snapshot_tests.rs
expression: v
---
{
  "annotations": null,
  "diff_source": {
    "base": "main",
    "base_sha": "[sha]",
    "diff_type": "BranchComparison",
    "head": "feature/add-items",
    "head_sha": "[sha]"
  },
  "groups": [
    {
      "edges": [],
      "entrypoint": {
        "entrypoint_type": "HttpRoute",
        "file": "app/routes/items.py",
        "symbol": "post_item"
      },
      "files": [
        {
          "changes": {
            "additions": 10,
            "deletions": 0
          },
          "flow_position": 0,
          "path": "app/routes/items.py",
          "role": "Entrypoint",
          "symbols_changed": []
        },
        {
          "changes": {
            "additions": 9,
            "deletions": 0
          },
          "flow_position": 1,
          "path": "app/repositories/item_repo.py",
          "role": "Infrastructure",
          "symbols_changed": []
        },
        {
          "changes": {
            "additions": 3,
            "deletions": 0
          },
          "flow_position": 2,
          "path": "app/schemas/item.py",
          "role": "Infrastructure",
          "symbols_changed": []
        },
        {
          "changes": {
            "additions": 7,
            "deletions": 0
          },
          "flow_position": 3,
          "path": "app/services/item_service.py",
          "role": "Infrastructure",
          "symbols_changed": []
        }
      ],
      "id": "group_1",
      "name": "post_item (items) route",
      "review_order": 1,
      "risk_score": 0.5425
    }
  ],
  "infrastructure_group": null,
  "summary": {
    "frameworks_detected": [
      "FastAPI"
    ],
    "languages_detected": [
      "python"
    ],
    "total_files_changed": 4,
    "total_groups": 1
  },
  "version": "1.0.0"
}
